<resources>
    <string name="global_name">Name</string>
    <string name="global_date">Date</string>
    <string name="global_size">Size</string>
    <string name="actionbar_search">Search this folder</string>
    <string name="actionbar_sync">Refresh account</string>
    <string name="actionbar_upload">Upload</string>
    <string name="actionbar_upload_from_apps">Content from other apps</string>
    <string name="actionbar_upload_files">Files</string>
    <string name="actionbar_open_with">Open with</string>
    <string name="actionbar_mkdir">New folder</string>
    <string name="actionbar_settings">Settings</string>
    <string name="actionbar_see_details">Details</string>
    <string name="actionbar_send_file">Send</string>
    <string name="actionbar_descending">Descending</string>
    <string name="actionbar_sort_title">Sort by</string>
    <string name="drawer_item_all_files">All files</string>
    <string name="drawer_item_only_available_offline">Available offline</string>
    <string name="drawer_item_shared_by_link_files">Shared by link</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_uploads_list">Uploads</string>
    <string name="drawer_close">Close</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_loading_quota">Loading quota</string>
    <string name="drawer_quota">%1$s of %2$s used (%3$s %%)</string>
    <string name="drawer_unavailable_free_storage">%1$s in use</string>
    <string name="drawer_unavailable_used_storage">No storage usage information available</string>
    <string name="drawer_feedback">Feedback</string>
    <string name="drawer_help">Help</string>
    <string name="prefs_category_general">General</string>
    <string name="prefs_subsection_logging">Logging</string>
    <string name="prefs_subsection_more">More</string>
    <string name="prefs_subsection_security">Security</string>
    <string name="prefs_subsection_security_summary">Set locks to access the app and allow touches with other visible windows</string>
    <string name="prefs_subsection_logging_summary">Keep track of logs produced by the execution of the app</string>
    <string name="prefs_subsection_more_summary">App info, feedback and others</string>
    <string name="prefs_accounts">Accounts</string>
    <string name="prefs_manage_accounts">Manage accounts</string>
    <string name="prefs_passcode">Passcode lock</string>
    <string name="prefs_biometric">Biometric lock</string>
    <string name="prefs_biometric_summary">Enable passcode or pattern lock to enable this option</string>
    <string name="prefs_lock_application">Lock application</string>
    <string name="prefs_lock_application_entries_immediately">Immediately</string>
    <string name="prefs_lock_application_entries_1minute">After 1 minute</string>
    <string name="prefs_lock_application_entries_5minutes">After 5 minutes</string>
    <string name="prefs_lock_application_entries_30minutes">After 30 minutes</string>
    <string name="prefs_lock_access_from_document_provider">Lock access from document provider</string>
    <string name="prefs_lock_access_from_document_provider_summary">Lock access from other apps to the files of the accounts in the app via the Android native file explorer.</string>
    <string name="prefs_touches_with_other_visible_windows">Touches with other visible windows</string>
    <string name="prefs_touches_with_other_visible_windows_summary">Allow touches when the view is obscured by another visible window. Enable it to use light filtering apps.</string>
    <string name="confirmation_touches_with_other_windows_title">Are you sure you want to enable this feature?</string>
    <string name="confirmation_touches_with_other_windows_message">Use this feature under your own responsibility, a malicious application could try to spoof you into performing some actions, unaware, using other views.</string>
    <string name="prefs_subsection_picture_uploads">Auto upload pictures</string>
    <string name="prefs_subsection_picture_uploads_summary">Manage location and behaviour of the pictures uploaded automatically</string>
    <string name="prefs_subsection_video_uploads">Auto upload videos</string>
    <string name="prefs_subsection_video_uploads_summary">Manage location and behaviour of the videos uploaded automatically</string>
    <string name="prefs_camera_picture_upload">Picture uploads</string>
    <string name="prefs_camera_picture_upload_summary">Automatically upload pictures taken by camera</string>
    <string name="prefs_camera_picture_upload_path_title">Picture upload path</string>
    <string name="prefs_camera_picture_upload_conditions_title">Conditions to execute uploads</string>
    <string name="prefs_camera_picture_upload_conditions_summary">Uploads will be triggered when all selected options are fulfilled</string>
    <string name="prefs_camera_picture_upload_on_wifi">Upload pictures via wifi only</string>
    <string name="prefs_camera_picture_upload_on_charging">Upload pictures only when charging</string>
    <string name="prefs_camera_upload_on_charging_summary">Enable wifi only uploads to activate this option</string>
    <string name="prefs_camera_video_upload">Video uploads</string>
    <string name="prefs_camera_video_upload_summary">Automatically upload videos recorded by camera</string>
    <string name="prefs_camera_video_upload_path_title">Video upload path</string>
    <string name="prefs_camera_video_upload_on_wifi">Upload videos via wifi only</string>
    <string name="prefs_camera_video_upload_on_charging">Upload videos only when charging</string>
    <string name="prefs_log_open_logs_list_view">Log files</string>
    <string name="prefs_log_no_logs_list_view">Empty log folder!</string>
    <string name="prefs_log_title">Enable logging</string>
    <string name="prefs_log_summary">This is used to log problems</string>
    <string name="prefs_log_title_history">Logging history</string>
    <string name="prefs_log_summary_history">This shows the recorded logs</string>
    <string name="prefs_log_delete_history_button">Delete history</string>
    <string name="prefs_help">Help</string>
    <string name="prefs_sync_calendar_contacts">Sync your contacts, calendars and tasks</string>
    <string name="prefs_sync_calendar_contacts_summary">Install DAVx⁵</string>
    <string name="prefs_recommend">Recommend to a friend</string>
    <string name="prefs_feedback">Feedback</string>
    <string name="prefs_imprint">Imprint</string>
    <string name="prefs_remember_last_share_location">Remember share location</string>
    <string name="prefs_remember_last_upload_location_summary">Remember last share upload location</string>
    <string name="prefs_pattern"> Pattern lock </string>
    <string name="prefs_enable_logging">Enable logging</string>
    <string name="prefs_enable_logging_summary">When activated, logs may impact performance and include sensitive information. However the logs are not subject to automatic submission to ownCloud servers. Sharing logs with others is sole user responsibility.</string>
    <string name="prefs_send_feedback">Send feedback</string>
    <string name="prefs_app_version">App version</string>
    <string name="prefs_app_version_summary">%1$s %2$s version %3$s (%4$s)</string>
    <string name="pattern_enter_pattern">Please enter your pattern</string>
    <string name="pattern_configure_pattern">Enter your pattern</string>
    <string name="pattern_remove_pattern">Remove your pattern</string>
    <string name="pattern_incorrect_pattern">Incorrect pattern</string>
    <string name="pattern_reenter_pattern">Please re-enter your pattern</string>
    <string name="pattern_not_same_pattern">The patterns are not same</string>
    <string name="pattern_error_set">An error occurred while setting the pattern lock</string>
    <string name="pattern_error_remove">An error occurred while removing the pattern lock</string>
    <string name="pattern_already_set">Pattern and passcode locks cannot be enabled at the same time, please disable pattern first</string>
    <string name="passcode_already_set">Pattern and passcode locks cannot be enabled at the same time, please disable passcode first</string>
    <string name="pattern_no_longer_required">The pattern will not be asked anymore</string>
    <string name="pattern_configure_your_pattern_explanation">The pattern will be requested every time the app is started</string>
    <string name="document_provider_locked">Locked</string>
    <string name="illegal_argument_exception_message">A valid ACTION is needed in the Intent passed to</string>
    <string name="bottom_nav_files">Files</string>
    <string name="bottom_nav_uploads">Uploads</string>
    <string name="bottom_nav_offline">Offline</string>
    <string name="bottom_nav_links">Links</string>
    <string name="recommend_subject">Try %1$s on your smartphone!</string>
    <string name="recommend_text">"I want to invite you to use %1$s on your smartphone!\nDownload here: %2$s"</string>
    <string name="error_reason">because</string>
    <string name="auth_failure_snackbar">Authentication failed</string>
    <string name="server_not_supported">Your server version is lower than 10 so is not supported, please upgrade your server to newer version</string>
    <string name="auth_failure_snackbar_action">Change account</string>
    <string name="auth_oauth_failure">The access token has expired or become invalid. Sign in again to regain access</string>
    <string name="auth_oauth_failure_snackbar_action">Sign in</string>
    <string name="auth_check_server">Check server</string>
    <string name="auth_host_url">Server address https://&#8230;</string>
    <string name="auth_username">Username</string>
    <string name="auth_password">Password</string>
    <string name="auth_register">New to %1$s?</string>
    <string name="sync_string_files">Files</string>
    <string name="setup_btn_login">Log in</string>
    <string name="uploader_btn_upload_text">Upload</string>
    <string name="uploader_top_message">Choose upload folder</string>
    <string name="uploader_wrn_no_account_title">No account found</string>
    <string name="uploader_wrn_no_account_text">There are no %1$s accounts on your device. Please set up an account first.</string>
    <string name="uploader_wrn_no_account_setup_btn_text">Setup</string>
    <string name="uploader_wrn_no_account_quit_btn_text">Quit</string>
    <string name="uploader_error_title_no_file_to_upload">No file to upload</string>
    <string name="uploader_error_message_received_piece_of_text">%1$s cannot upload a piece of text as a file.</string>
    <string name="uploader_error_message_no_file_to_upload">Received data do not include any valid file.</string>
    <string name="uploader_error_title_file_cannot_be_uploaded">File cannot be uploaded</string>
    <string name="uploader_error_message_read_permission_not_granted">%1$s is not allowed to read a received file</string>
    <string name="uploader_error_message_source_file_not_found">File to upload was not found in its location. Please check whether the file exists.</string>
    <string name="uploader_error_message_source_file_not_copied">An error occurred while copying the file to a temporary folder. Please try to send again.</string>
    <string name="file_list_seconds_ago">seconds ago</string>
    <string name="file_list_empty">Nothing in here. Upload something!</string>
    <string name="file_list_empty_available_offline">There are no available offline files.</string>
    <string name="file_list_empty_shared_by_links">No files have been shared by link.</string>
    <string name="file_list_loading">Loading&#8230;</string>
    <string name="uploads_view_upload_status_succeeded">Completed</string>
    <string name="placeholder_filename">placeholder.txt</string>
    <string name="placeholder_filesize">389 KB</string>
    <string name="placeholder_timestamp">2012/05/18 12:23 PM</string>
</resources>